--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Bower
+bower_components
+
+# npm
+node_modules
+
+# webpack
+prototype/app/bundle.min.js
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
 *.iml
@@ -44,9 +53,3 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
-
-# Bower
-bower_components
-
-# npm
-node_modules
