--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,13 @@
     "eslint:recommended", "plugin:react/recommended"
   ],
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "sourceType": "module"
+  },
   "env": {
     "browser": true,
     "node": true,
@@ -12,11 +19,175 @@
     "react"
   ],
   "rules": {
-    "quotes": [2, "single"],
-    "no-console": 0,
-    "no-unused-vars": 0,
-    "react/display-name": 0,
-    "react/prop-types": 0,
-    "react/no-multi-comp": 0
+    "no-extra-parens": 0,
+    "no-unsafe-finally": 2,
+    "valid-jsdoc": 1,
+    "no-use-before-define": 2,
+    "array-callback-return": 2,
+    "block-scoped-var": 1,
+    "complexity": 2,
+    "consistent-return": 2,
+    "curly": 2,
+    "default-case": 1,
+    "dot-location": [2, "property"],
+    "dot-notation": 1,
+    "eqeqeq": 2,
+    "guard-for-in": 1,
+    "no-alert": 1,
+    "no-caller": 2,
+    "no-case-declarations": 2,
+    "no-div-regex": 2,
+    "no-else-return": 2,
+    "no-empty-function": 2,
+    "no-empty-pattern": 2,
+    "no-eq-null": 2,
+    "no-eval": 2,
+    "no-extend-native": 2,
+    "no-extra-bind": 2,
+    "no-fallthrough": 2,
+    "no-floating-decimal": 2,
+    "no-implicit-coercion": 2,
+    "no-implicit-globals": 2,
+    "no-implied-eval": 2,
+    "no-invalid-this": 2,
+    "no-iterator": 2,
+    "no-labels": 1,
+    "no-lone-blocks": 2,
+    "no-loop-func": 2,
+    "no-magic-numbers": 1,
+    "no-multi-spaces": 1,
+    "no-multi-str": 2,
+    "no-native-reassign": 2,
+    "no-new": 2,
+    "no-new-func": 2,
+    "no-new-wrappers": 2,
+    "no-octal-escape": 2,
+    "no-param-reassign": 2,
+    "no-proto": 2,
+    "no-redeclare": 2,
+    "no-return-assign": 2,
+    "no-script-url": 2,
+    "no-self-assign": 2,
+    "no-self-compare": 2,
+    "no-sequences": 2,
+    "no-throw-literal": 2,
+    "no-unmodified-loop-condition": 1,
+    "no-unused-expressions": 2,
+    "no-useless-call": 2,
+    "no-useless-concat": 2,
+    "no-useless-escape": 2,
+    "no-void": 2,
+    "no-warning-comments": 1,
+    "no-with": 2,
+    "radix": 2,
+    "vars-on-top": 0,
+    "wrap-iife": 2,
+    "yoda": 2,
+    "no-catch-shadow": 2,
+    "no-delete-var": 2,
+    "no-shadow": 2,
+    "no-shadow-restricted-names": 2,
+    "no-undef": 1,
+    "no-undef-init": 2,
+    "no-undefined": 2,
+    "no-unused-vars": 2,
+    "global-require": 1,
+    "array-bracket-spacing": 2,
+    "block-spacing": 2,
+    "brace-style": 2,
+    "camelcase": 2,
+    "comma-spacing": 2,
+    "comma-style": 2,
+    "computed-property-spacing": 2,
+    "eol-last": 1,
+    "func-names": 1,
+    "func-style": [2, "declaration", {"allowArrowFunctions": true}],
+    "indent": [2, 2, {"SwitchCase": 1}],
+    "jsx-quotes": 2,
+    "key-spacing": 2,
+    "keyword-spacing": 2,
+    "linebreak-style": 2,
+    "max-depth": [2, {"max": 4}],
+    "max-len": [2, {"code": 120, "ignoreComments": false, "ignoreUrls": true}],
+    "max-nested-callbacks": [2, {"max": 3}],
+    "new-cap": 1,
+    "new-parens": 2,
+    "no-array-constructor": 2,
+    "no-lonely-if": 2,
+    "no-mixed-operators": [
+      2,
+      {
+        "groups": [
+          ["+", "-", "*", "/", "%", "**"],
+          ["&", "|", "^", "~", "<<", ">>", ">>>"],
+          ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
+          ["&&", "||"],
+          ["in", "instanceof"]
+        ],
+        "allowSamePrecedence": true
+      }
+    ],
+    "no-multiple-empty-lines": 2,
+    "no-negated-condition": 2,
+    "no-nested-ternary": 2,
+    "no-new-object": 2,
+    "no-spaced-func": 2,
+    "no-trailing-spaces": 2,
+    "no-underscore-dangle": 2,
+    "no-whitespace-before-property": 2,
+    "object-curly-newline": [2, {"multiline": true}],
+    "object-curly-spacing": 2,
+    "object-property-newline": 0,
+    "one-var-declaration-per-line": [2, "always"],
+    "operator-assignment": [2, "never"],
+    "operator-linebreak": 2,
+    "quote-props": [2, "as-needed"],
+    "quotes": [2, "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
+    "require-jsdoc": [2, {
+      "require": {
+        "FunctionDeclaration": true,
+        "MethodDefinition": false,
+        "ClassDeclaration": false
+      }
+    }],
+    "semi": [2, "always"],
+    "semi-spacing": [2, {"before": false, "after": true}],
+    "space-before-function-paren": 2,
+    "space-in-parens": 2,
+    "space-infix-ops": 2,
+    "space-unary-ops": [ 2, {"words": true, "nonwords": false}],
+    "wrap-regex": 2,
+    "arrow-body-style": 2,
+    "arrow-parens": 2,
+    "arrow-spacing": 2,
+    "generator-star-spacing": 2,
+    "no-confusing-arrow": 2,
+    "no-duplicate-imports": 2,
+    "no-useless-computed-key": 2,
+    "constructor-super": 2,
+    "no-useless-constructor": 2,
+    "no-useless-rename": [
+      2,
+      {
+        "ignoreDestructuring": false,
+        "ignoreImport": false,
+        "ignoreExport": false
+      }
+    ],
+    "no-var": 2,
+    "prefer-arrow-callback": 2,
+    "prefer-const": 2,
+    "prefer-reflect": 2,
+    "prefer-rest-params": 2,
+    "prefer-spread": 2,
+    "prefer-template": 2,
+    "require-yield": 2,
+    "rest-spread-spacing": [2, "never"],
+    "template-curly-spacing": 2,
+    "yield-star-spacing": 2,
+    "no-console": 1,
+    "react/display-name": 1,
+    "react/prop-types": 1,
+    "react/no-multi-comp": 1
   }
 }
