--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "webpack",
     "test": "npm run test:lint",
     "test:tdd": "npm run test -- --auto-watch --no-single-run",
-    "test:lint": "eslint ./app ./tests --ext .js --ext .jsx --ignore-path .gitignore --ignore-pattern dist --cache"
+    "test:lint": "eslint . --ext .js --ext .jsx --cache"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -29,9 +29,9 @@
     "babel-preset-survivejs-kanban": "^0.3.3",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
-    "eslint": "2.10.2",
+    "eslint": "2.13.1",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-react": "^5.2.2",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
