--- a/.eslintrc
+++ b/.eslintrc
@@ -135,7 +135,7 @@
     "no-trailing-spaces": 2,
     "no-underscore-dangle": 2,
     "no-whitespace-before-property": 2,
-    "object-curly-newline": [2, {"multiline": true}],
+    "object-curly-newline": 0,
     "object-curly-spacing": 2,
     "object-property-newline": 0,
     "one-var-declaration-per-line": [2, "always"],
@@ -143,7 +143,7 @@
     "operator-linebreak": 2,
     "quote-props": [2, "as-needed"],
     "quotes": [2, "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
-    "require-jsdoc": [2, {
+    "require-jsdoc": [1, {
       "require": {
         "FunctionDeclaration": true,
         "MethodDefinition": false,
@@ -161,7 +161,7 @@
     "arrow-parens": 2,
     "arrow-spacing": 2,
     "generator-star-spacing": 2,
-    "no-confusing-arrow": 2,
+    "no-confusing-arrow": [2, {"allowParens": true}],
     "no-duplicate-imports": 2,
     "no-useless-computed-key": 2,
     "constructor-super": 2,
