--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "react-addons-perf": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
+    "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
@@ -64,6 +65,8 @@
     "file-loader": "^0.8.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "url-loader": "^0.5.7"
   }
 }
