--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cider-ref",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "description": "Hard cider made easy! Calculators and reference materials for cider makers.",
   "homepage": "https://github.com/mvolk/ciderref",
@@ -17,21 +17,26 @@
     "build": "webpack",
     "test": "npm run test:lint",
     "test:tdd": "npm run test -- --auto-watch --no-single-run",
-    "test:lint": "eslint . --ext .js --ext .jsx --cache"
+    "test:lint": "eslint . --ext .js --ext .jsx --cache",
+    "lint:fix": "eslint . --ext .js --ext .jsx --cache --fix"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-trailing-function-commas": "^6.20.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
-    "eslint": "2.13.1",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -61,12 +66,12 @@
     "webpack-validator": "^2.1.1"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
-    "file-loader": "^0.8.5",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
+    "bootstrap": "^3.3.7",
+    "file-loader": "^0.9.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "url-loader": "^0.5.7"
   }
 }
