--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "ciderlib": "^0.2.0",
     "file-loader": "^0.9.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
