--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,17 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "survivejs-kanban"
-  ],
+  "presets": ["es2015", "react"],
   "env": {
-    "start": {
-      "presets": [
-        "react-hmre"
-      ]
+    "development": {
+      "presets": ["react-hmre"]
     }
   },
   "plugins": [
-    "syntax-trailing-function-commas"
+    "syntax-class-properties",
+    "syntax-object-rest-spread",
+    "syntax-trailing-function-commas",
+    "transform-class-properties",
+    "transform-exponentiation-operator",
+    "transform-object-rest-spread",
+    "transform-object-assign"
   ]
 }
