--- a/.eslintrc
+++ b/.eslintrc
@@ -11,14 +11,14 @@
   "env": {
     "browser": true,
     "node": true,
-    "mocha": true
+    "jest": true,
   },
   "plugins": [
     "react"
   ],
   "rules": {
-    "jsx-a11y/img-has-alt": 1,
-    "jsx-a11y/label-has-for": 1,
-    "jsx-a11y/no-static-element-interactions": 1
+    "jsx-a11y/img-has-alt": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   }
 }
