--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
     "stats": "webpack --profile --json > stats.json",
     "start": "webpack-dev-server",
     "build": "webpack",
-    "test": "npm run test:lint",
-    "test:tdd": "npm run test -- --auto-watch --no-single-run",
-    "test:lint": "eslint . --ext .js --ext .jsx --cache",
-    "lint:fix": "eslint . --ext .js --ext .jsx --cache --fix"
+    "lint": "eslint src --ext .js --ext .jsx && eslint test --ext .js --ext .jsx",
+    "lint:fix": "eslint src --ext .js --ext .jsx --fix && eslint test --ext .js --ext .jsx --fix",
+    "jest": "jest --config ./jest.json",
+    "coverage": "npm run jest -- --coverage",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "pretest": "npm run lint",
+    "test": "npm run jest"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.20.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.22.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-survivejs-kanban": "^0.3.3",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "eslint": "^3.13.1",
@@ -40,23 +49,12 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.17.0",
     "html-webpack-template": "^5.0.0",
-    "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.22",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.5.2",
-    "npm-install-webpack-plugin": "4.0.0",
-    "phantomjs-polyfill": "0.0.2",
-    "phantomjs-prebuilt": "^2.1.7",
+    "jest": "^18.1.0",
     "react-addons-perf": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-test-renderer": "^15.4.2",
     "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -67,12 +65,11 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "ciderlib": "^0.2.0",
-    "file-loader": "^0.9.0",
+    "ciderlib": "^1.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-proptype-conditional-require": "^1.0.4",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
-    "url-loader": "^0.5.7"
+    "redux": "^3.6.0"
   }
 }
