--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^15.4.2",
     "react-proptype-conditional-require": "^1.0.4",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0"
   }
 }
