--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "ciderlib": "^1.0.1",
+    "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-proptype-conditional-require": "^1.0.4",
